<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/gray02"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="7dp" >

            <Button
                android:id="@+id/btn_down"
                style="@style/file_listner_btn_style"
                android:text="@string/downLoad" />
        </LinearLayout>
        <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/gray02"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="7dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="7dp" >

        <Button
            android:id="@+id/btn_clear"
            style="@style/file_listner_btn_style"
            android:text="@string/clear" />
    </LinearLayout>-->

        <TextView
            android:id="@id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_new_imei"
                    style="@style/text_style"
                    android:text="tv_imei_recognition" />

                <TextView
                    android:id="@+id/tv_old_imei"
                    style="@style/text_style"
                    android:text="tv_imei_recognition" />

                <TextView
                    android:id="@+id/tv_imei_recognition"
                    style="@style/text_style"
                    android:text="tv_imei_recognition" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/lv_app_choose_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" >
        </ListView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_percent_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_percent_tips"
                android:background="@color/gray02"
                android:hint="@string/set_percent_hint"
                android:maxLength="3"
                android:numeric="integer"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_percent_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/et_percent"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tv_percent_tips"
                android:background="@drawable/file_record_btn_selector"
                android:text="@string/set"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_package_name_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_package_name_tips"
                android:layout_marginRight="60dp"
                android:background="@color/gray02"
                android:hint="@string/add_an_db_tip"
                android:padding="10dp" />

            <EditText
                android:id="@+id/et_package_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_app_name"
                android:layout_marginRight="60dp"
                android:layout_marginTop="3dp"
                android:background="@color/gray02"
                android:hint="@string/add_pn_db_tip"
                android:padding="10dp" />
            <!-- android:text="com.huodongjia.girl2048" -->

            <Button
                android:id="@+id/btn_package_name_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/et_package_name"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/et_app_name"
                android:layout_below="@id/tv_package_name_tips"
                android:background="@drawable/file_record_btn_selector"
                android:gravity="center"
                android:text="@string/add"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="7dp" >

            <Button
                android:id="@+id/btn_get_app_sd"
                style="@style/file_listner_btn_style"
                android:text="@string/get_app_from_sd" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_install_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_install_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_install_tips"
                android:background="@color/gray02"
                android:hint="@string/set_install_hint"
                android:maxLength="3"
                android:numeric="integer"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_install_time_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/et_install_time"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tv_install_tips"
                android:background="@drawable/file_record_btn_selector"
                android:text="@string/set"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/auto_to_market_tip" />

            <ToggleButton
                android:id="@+id/tb_to_market"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:button="@drawable/togglebtn_bg"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/auto_to_hdj_tip" />

            <ToggleButton
                android:id="@+id/tb_to_hdj_hook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:button="@drawable/togglebtn_bg"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/auto_click_in_market" />

            <ToggleButton
                android:id="@+id/tb_auto_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:button="@drawable/togglebtn_bg"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_size"
            android:layout_margin="@dimen/margin_size"
            android:orientation="vertical"
            android:background="@color/gray04"
            >
            
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/choose_market"
             />

        <RadioGroup
            android:id="@+id/rg_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rb_bd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_baidu" />

            <RadioButton
                android:id="@+id/rb_360"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_360" />

            <RadioButton
                android:id="@+id/rb_yyb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_yyb" />
            
        </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</ScrollView>